--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800;900&display=swap"
         rel="stylesheet">
-    <title>Document</title>
+        <link rel="shortcut icon" href="img/ufitfly new logo (1).png" type="image/x-icon">
+    <title>Ufitfly</title>
 </head>
 
 <body>
