--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="list">
                 <h2>Ministers</h2>
                 <img src="./img/Line 1.svg" alt="space">
-                <h2>Entreprenuers</h2>
+                <h2>Entrepreneurs</h2>
                 <img src="./img/Line 1.svg" alt="space">
                 <h2>Police</h2>
                 <img src="./img/Line 1.svg" alt="space">
