--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800;900&display=swap"
         rel="stylesheet">
-        <link rel="shortcut icon" href="img/ufitfly new logo (1).png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/ufitfly new logo (1).png" type="image/x-icon">
     <title>Ufitfly</title>
 </head>
 
@@ -23,8 +23,12 @@
                 <h1>ARE YOU INTO ANY PROFESSION ?</h1>
             </div>
         </div>
-        <img id="pro" src="./img/profes (1) 1.png" alt="">
-        <div class="mulit"></div>
+        <div class="x2">
+            <img id="pro" src="./img/profes (1) 1.png" alt="">
+            <div class="mulit"></div>
+            <img id="mobile" src="./img/profes (1) 1 -mobile.png" alt="">
+        </div>
+
 
         <div class="container-space2">
             <div class="caps">
@@ -78,35 +82,42 @@
         <div class="footer">
             <div>
                 <button class="button1">
-                <div id="s1">
-                    <a href=""><img id="face" src="./img/icons8-facebook.svg" alt=""></a>
-                </div>
-            </button>
+                    <div id="s1">
+                        <a href=""><img id="face" src="./img/icons8-facebook-96.png" alt=""></a>
+                    </div>
+                </button>
             </div>
 
             <div>
                 <button class="button2">
-                <div id="s2"> 
-                    <a href="https://instagram.com/official_ufitfly?igshid=NjIwNzIyMDk2Mg=="><img id="ig" src="./img/instagram-transparent-image-9 1.svg" alt=""></a></div>
+                    <div id="s2">
+                        <a href="https://instagram.com/official_ufitfly?igshid=NjIwNzIyMDk2Mg=="><img id="ig"
+                                src="./img/icons8-instagram.svg" alt=""></a>
+                    </div>
                 </button>
             </div>
 
             <div class="all">
                 <button class="button3">
-                <div id="s3">
-                  <a href="https://www.ufitfly.com/"><img src="./img/icons8-website-32.png" alt="">  </a>
-                </div>
+                    <div id="s3">
+                        <a href="https://www.ufitfly.com/"><svg viewBox="0 0 128 128" xml:space="preserve"
+                                xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 128 128">
+                                <path
+                                    d="M64 126c34.2 0 62-27.8 62-62S98.2 2 64 2 2 29.8 2 64s27.8 62 62 62zM16 88.7l25.2-.2c2.8 10.1 7.5 19.9 13.9 28.7C38 114.4 23.7 103.5 16 88.7zM47.6 47H79c2.3 11 2.3 22.3.2 33.3l-31.6.2c-2.3-11.1-2.3-22.5 0-33.5zm15.7 67.9c-6.3-8.1-10.9-17-13.7-26.4l27.5-.2c-2.9 9.4-7.5 18.4-13.8 26.6zm8 2.6c6.6-9 11.3-18.9 14.1-29.3l26.9-.2c-7.8 15.7-23 27-41 29.5zM118 64c0 5.6-.9 11-2.4 16l-28.3.2c2-11 1.9-22.2-.2-33.2h28.1c1.8 5.3 2.8 11.1 2.8 17zm-6.2-25H85.2c-2.9-10-7.5-19.7-13.9-28.5C89 12.9 103.9 23.8 111.8 39zm-34.9 0H49.7c2.9-9.2 7.4-17.9 13.6-25.9 6.2 8 10.7 16.7 13.6 25.9zM55.1 10.8C48.8 19.5 44.2 29 41.4 39H16.2c7.7-14.7 21.9-25.4 38.9-28.2zM39.5 47c-2.1 11.1-2.1 22.4-.1 33.5l-26.7.2C10.9 75.4 10 69.8 10 64c0-5.9 1-11.7 2.8-17h26.7z"
+                                    fill="#ffffff" class="fill-000000"></path>
+                            </svg></a>
+                    </div>
                 </button>
             </div>
 
-            
+
 
             <div class="all">
                 <button class="button4">
                     <div id="s4">
                         <a href="http://twitter.com/ufitfly"><img id="x" src="./img/icons8-twitterx.svg" alt=""></a>
                     </div>
-                  </button>
+                </button>
             </div>
         </div>
     </div>
