--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800;900&display=swap"
         rel="stylesheet">
     <link rel="shortcut icon" href="img/ufitfly new logo (1).png" type="image/x-icon">
+    <script defer src="https://cdn.vercel-insights.com/v1/script.debug.js"></script>
     <title>Ufitfly</title>
 </head>
 
