--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         rel="stylesheet">
     <link rel="shortcut icon" href="img/ufitfly new logo (1).png" type="image/x-icon">
     <script defer src="https://cdn.vercel-insights.com/v1/script.debug.js"></script>
+    <script>
+        window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+      </script>
+      <script defer src="/_vercel/insights/script.js"></script>
     <title>Ufitfly</title>
 </head>
 
